# xarrayspecs

./: .buildinfo  CITATION.cff  README.md  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: xarrayspecs.api.doctree  xarrayspecs.convert.doctree  xarrayspecs.new.doctree  xarrayspecs.typing.doctree
.github/workflows/: tests.yaml
0.1.0/: genindex.html
0.1.0/.doctrees/: environment.pickle
0.1.0/_apidoc/: xarrayspecs.api.html
0.2.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.2.0/.doctrees/: environment.pickle
0.2.0/_apidoc/: xarrayspecs.api.html  xarrayspecs.html  xarrayspecs.spec.html
0.2.0/_modules/: index.html
0.2.0/_sources/: index.md.txt
0.3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.0/.doctrees/: environment.pickle  index.doctree
0.3.0/_apidoc/: xarrayspecs.api.html  xarrayspecs.convert.html  xarrayspecs.html  xarrayspecs.spec.html
0.3.0/_modules/: index.html
0.4.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.0/.doctrees/: environment.pickle
0.4.0/_apidoc/: xarrayspecs.api.html  xarrayspecs.convert.html  xarrayspecs.html  xarrayspecs.spec.html
0.4.0/_modules/: index.html
0.4.0/_static/: switcher.json
0.5.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
0.5.0/.doctrees/: environment.pickle  index.doctree
0.5.0/_apidoc/: xarrayspecs.api.html  xarrayspecs.convert.html  xarrayspecs.html  xarrayspecs.spec.html
0.5.0/_modules/: index.html
0.5.0/_static/: switcher.json
0.6.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0/.doctrees/: environment.pickle  index.doctree
0.6.0/_apidoc/: xarrayspecs.api.html  xarrayspecs.convert.html  xarrayspecs.html  xarrayspecs.spec.html
0.6.0/_modules/: index.html
0.7.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.7.0/.doctrees/: environment.pickle  index.doctree
0.7.0/_apidoc/: xarrayspecs.convert.html  xarrayspecs.core.html  xarrayspecs.html  xarrayspecs.typing.html
0.7.0/_modules/: index.html
_apidoc/: xarrayspecs.html  xarrayspecs.new.html  xarrayspecs.spec.html
_modules/: index.html
_modules/xarrayspecs/: spec.html
_sources/_apidoc/: xarrayspecs.convert.rst.txt  xarrayspecs.core.rst.txt  (+2 more)
docs/: build  conf.py
tests/: test_asdataarray.py  test_asdataset.py  test_asdatatree.py  test_init.py
xarrayspecs/: __init__.py  api.py  convert.py  core.py  new.py  spec.py  typing.py
(+41 files in other folders)
