[project]
name = "xarrayspecs"
version = "0.1.0"
description = "Xarray specifications by type hints"
readme = "README.md"
keywords = [
    "annotation",
    "dataclass",
    "python",
    "specification",
    "typing",
    "xarray",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=2,<3",
    "pandas>=2,<3",
    "typespecs>=2,<3",
    "xarray>=2025,<2027",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "a-taniguchi@mail.kitami-it.ac.jp"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/xarrayspecs"
repository = "https://github.com/astropenguin/xarrayspecs"

[dependency-groups]
dev = [
    "black>=25,<27",
    "ipython>=8,<10",
    "myst-parser>=3,<5",
    "pandas-stubs>=2,<3",
    "pydata-sphinx-theme>=0.16,<1.0",
    "pyright>=1,<2",
    "pytest>=9,<10",
    "sphinx>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
